# colorweave

./: README.md  pyproject.toml  requirements.txt
c_weave/: cli.py  config.py  design.py  generate.py  scheme.py  theme.py  wallpaper.py
c_weave/commands/: generate_cmds.py  scheme_cmds.py  wallpaper_cmds.py
c_weave/utils/: cli.py  color.py  logging.py
data/prompts/palette_design/: base.md
data/samples/: lush.md  lush.txt
data/workflows/: upscale_ldsr.json
dev/: theme.qmd  workflow.qmd
